--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -335,8 +335,8 @@ img {
   border-radius: 50%;
 }
 hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   border: 0;
   border-top: 1px solid #eee;
 }
@@ -5783,3 +5783,6 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+.rounded_btn{
+  border-radius: 22px 0px 0px 22px;
+}
